# First-IT-Company

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cashflow/: asgi.py  settings.py  urls.py  wsgi.py
cashflow_records/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
cashflow_records/migrations/: 0001_initial.py
cashflow_records/templates/cashflow_records/: cashflow_confirm_delete.html  cashflow_form.html  cashflow_list.html
directories/: admin.py  models.py  urls.py  views.py
directories/migrations/: 0001_initial.py
directories/templates/directories/: category_confirm_delete.html  category_form.html  category_list.html  status_confirm_delete.html  status_form.html  status_list.html  subcategory_confirm_delete.html  subcategory_form.html  subcategory_list.html  type_confirm_delete.html  type_form.html  type_list.html
nginx/: nginx.conf
